Revision history for SWISH-Prog-KSx

0.01    29 Nov 2009
    * First version, released on an unsuspecting world.

0.02    1 Dec 2009
    * POD fixes

0.03    12 Dec 2009
    * support SWISH::3::Config format internally.
      Can now read Swish-e 2.4.x config files and apply
      them to Swish3 format.

0.04    02 Jan 2010
    * fix mem leaks, config use.

0.05    07 Jan 2009
    * add fielded search support.

0.06    01 Feb 2010
    * add properties to index as stored but non-analyzed fields.
    * alias_for meta/props not created as fields (TODO queryparser
      mapping)
    * RangeQuery support added with search($query, { limit => $limit })
    * PolySearcher always used internall, 
      supporting multiple invindex simultaneously.

0.07    01 Feb 2010
    * Searcher can now accept a Swish-e/SQL-like sort order string.

0.08    22 Feb 2010
    * Indexer will now remove any existing doc with same 
      swishdocpath before calling add_doc().

0.09    xxx
    * support sort by rank
