@@ -293,11 +293,11 @@ sub _handler {
         my @keys = keys %{ $field->{store_as} };
 
         for my $key (@keys) {
-            if ( $field->{is_prop} ) {
-                push( @{ $doc{$key} }, @{ $props->{$fname} } );
-            }
-            elsif ( $field->{is_meta} ) {
+            if ( $field->{is_meta} ) {
                 push( @{ $doc{$key} }, @{ $metas->{$fname} } );
+            }
+            elsif ( $field->{is_prop} ) {
+                push( @{ $doc{$key} }, @{ $props->{$fname} } );
             }
             else {
                 croak "field '$fname' is neither a PropertyName nor MetaName";
