@@ -1,1 +1,3 @@
 DefaultContents HTML*
+IndexContents XML* .xml
+IndexContents HTML* .html
